--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,25 +11,22 @@ serde = { version = "1.0.101", optional = true, features = ["derive"], default-f
 log = { version = "0.4", default-features = false }
 scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 
-frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
-frame-system = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
-sp-core = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
-sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
-sp-std = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
-sp-io = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
-pallet-balances = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
-pallet-utility = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.13" }
-frame-benchmarking = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.13", optional = true }
+frame-support = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
+frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
+sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
+sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
+sp-std = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
+sp-io = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
+pallet-balances = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
+pallet-utility = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
+frame-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false, optional = true }
 ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend", "alloc"], optional = true }
-sp-trie = { git = "https://github.com/purestake/substrate", default-features = false, branch = "moonbeam-polkadot-v0.9.13", optional = true }
-
-# These cumulus dependencies to be removed with https://github.com/PureStake/crowdloan-rewards/pull/44
-cumulus-primitives-core = { git = "https://github.com/purestake/cumulus", default-features = false, branch = "moonbeam-polkadot-v0.9.13", optional = true }
-cumulus-pallet-parachain-system = { git = "https://github.com/purestake/cumulus", default-features = false, branch = "moonbeam-polkadot-v0.9.13", optional = true }
-cumulus-primitives-parachain-inherent = { git = "https://github.com/purestake/cumulus", default-features = false, branch = "moonbeam-polkadot-v0.9.13", optional = true }
+sp-trie = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false, optional = true }
+mangata-primitives = { git = "https://github.com/mangata-finance/mangata-node", branch = "mangata-dev-v4", default-features = false }
+orml-tokens = { default-features = false, version = '0.4.1-dev', git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev-v4" }
 
 [dev-dependencies]
-cumulus-test-relay-sproof-builder = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-polkadot-v0.9.13" }
+orml-traits = { default-features = false, version = "0.4.1-dev", git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev-v4" }
 
 [features]
 default = ["std"]
@@ -46,16 +43,16 @@ std = [
     "log/std",
     "sp-std/std",
     "sp-io/std",
-    "cumulus-pallet-parachain-system/std",
-    "cumulus-primitives-core/std",
-    "cumulus-primitives-parachain-inherent/std",
     "scale-info/std",
+    "mangata-primitives/std",
+    "orml-tokens/std",
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
     "sp-trie",
     "ed25519-dalek",
-    "cumulus-primitives-core",
-    "cumulus-pallet-parachain-system",
-    "cumulus-primitives-parachain-inherent",
 ]
+
+[patch."https://github.com/mangata-finance/open-runtime-module-library"]
+orml-tokens = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
+orml-traits = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
