--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,22 +11,22 @@ serde = { version = "1.0.101", optional = true, features = ["derive"], default-f
 log = { version = "0.4", default-features = false }
 scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 
-frame-support = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
-frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
-sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
-sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
-sp-std = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
-sp-io = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
-pallet-balances = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
-pallet-utility = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false }
-frame-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false, optional = true }
+frame-support = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
+frame-system = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
+sp-core = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
+sp-runtime = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
+sp-std = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
+sp-io = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
+pallet-balances = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
+pallet-utility = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false }
+frame-benchmarking = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false, optional = true }
 ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend", "alloc"], optional = true }
-sp-trie = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev-v4", default-features = false, optional = true }
-mangata-primitives = { git = "https://github.com/mangata-finance/mangata-node", branch = "mangata-dev-v4", default-features = false }
-orml-tokens = { default-features = false, version = '0.4.1-dev', git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev-v4" }
+sp-trie = { git = "https://github.com/mangata-finance/substrate", branch = "mangata-dev", default-features = false, optional = true }
+mangata-primitives = { git = "https://github.com/mangata-finance/mangata-node", branch = "develop", default-features = false }
+orml-tokens = { default-features = false, version = '0.4.1-dev', git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }
 
 [dev-dependencies]
-orml-traits = { default-features = false, version = "0.4.1-dev", git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev-v4" }
+orml-traits = { default-features = false, version = "0.4.1-dev", git = "https://github.com/mangata-finance/open-runtime-module-library", branch = "mangata-dev" }
 
 [features]
 default = ["std"]
@@ -54,5 +54,5 @@ runtime-benchmarks = [
 ]
 
 [patch."https://github.com/mangata-finance/open-runtime-module-library"]
-orml-tokens = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
-orml-traits = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "feature/issuance-vesting-crowdloan" }
+orml-tokens = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "mangata-dev" }
+orml-traits = { git = "https://github.com/mangata-finance//open-runtime-module-library", branch = "mangata-dev" }
